fix: fix testimonial slider block overflowing container

--- a/blocks/src/testimonials-slider/style.scss
+++ b/blocks/src/testimonials-slider/style.scss
@@ -44,6 +44,7 @@
 }
 
 .ecs-testimonial-slide {
+	box-sizing: border-box;
 	width: 100%;
 	max-width: 500px;
 	opacity: 0;
@@ -51,7 +52,6 @@
 	padding: 1.5rem;
   	flex-direction: column;
 	gap: 1rem;
-  	background-color: white;
   	border-radius: var(--ecs-border-radius);
  	border: solid 1px var(--ecs-lightest-grey);
  	box-shadow: 0 1px 3px rgba(0, 0, 0, 0.08);
